- Support field directives - thanks @yigarashi-9

0.37 2019-11-04
 - fix literal input-object coercion problem - thanks @ccakes
 - add "extensions" field to GraphQL::Error - thanks @cockscomb

0.36 2019-05-01
 - doc improvements

0.35 2019-04-29
 - remove author-mode stuff from affecting make in distro

0.34 2019-04-28
 - List now has "name" that is its "of"'s name

0.33	Thu 21 Feb 22:58:02 GMT 2019
 - update Plugin::Convert docs - thanks @aksonov
 - zap "meaningful comment" as description
 - implement GraphQL::Plugin::Type API, switch DateTime to that

0.32	Tue  5 Feb 02:37:20 GMT 2019
 - metadata and test updates
 - unescape string literals - thanks @chazmcgarvey
 - add block strings - thanks @chazmcgarvey
 - update SDL parsing to current graphql-js, including empty defs of most types
 - make to_doc produce new-style descriptions while from_doc still understands old, so can convert

0.31	Sun  1 Jul 23:10:59 BST 2018
 - Fix non-nullable Enum being misdetected - thanks @mechairoi

0.30	Wed 28 Feb 04:29:50 GMT 2018
 - make variable-type errors JSONable for returning - thanks @nohuhu

0.29	Thu Feb 15 03:40:12 GMT 2018
 - Pegex version that gets line_column right

0.28	Sat Feb 10 18:26:29 GMT 2018
 - fix Enum type-check bug #10

0.27	Fri Feb  9 18:13:35 GMT 2018
 - fix input type-check bug #9

0.26	Sat Dec 30 08:45:37 GMT 2017
 - the "then" of ->all will get each result as array-ref

0.25	Fri Dec 29 12:47:13 GMT 2017
 - more-correct handle of lists and non-null
 - handles Promises if give helper code-refs (type PromiseCode)

0.24	Tue 12 Dec 03:57:18 GMT 2017
 - handle array of enum

0.23	Sat  9 Dec 17:48:42 GMT 2017
 - fix 5.14 bug with "?" ambiguity

0.22	Sat  9 Dec 06:44:51 GMT 2017
 - basic Dockerfile makes 5.26.1 image with GraphQL
 - multi-line descriptions parsed and round-tripped right
 - doc updates

0.21	Thu Nov 16 05:22:53 GMT 2017
 - add DateTime scalar type
 - allow class overrides in Schema.from_ast
 - add and use _complete_value to the Type classes
