@@ -1,3 +1,4 @@
+- more tests for directives - thanks @jjn1056
 - Support field directives - thanks @yigarashi-9
 
 0.37 2019-11-04
